[package]
name = "skill-llm"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "LLM inference engine for NeuroSkill — extracted workspace crate"

[features]
default    = []
llm        = ["dep:llama-cpp-4", "axum/multipart", "llm-mtmd"]
llm-metal  = ["llm", "llama-cpp-4?/metal"]
llm-cuda   = ["llm", "llama-cpp-4?/cuda"]
llm-vulkan = ["llm", "llama-cpp-4?/vulkan"]
llm-mtmd   = ["llm", "llama-cpp-4?/mtmd"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
skill-constants = { path = "../skill-constants" }
skill-data      = { path = "../skill-data" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { workspace = true }
axum       = { version = "0.8", features = ["ws"] }
tokio      = { version = "1", features = ["full"] }
async-stream = "0.3"
log        = "0.4"
base64 = { workspace = true }
ureq       = { version = "3", features = ["native-tls", "json"] }
either     = "1"
hf-hub     = "0.5"
skill-tools  = { path = "../skill-tools", default-features = false }
skill-skills = { path = "../skill-skills" }

llama-cpp-4 = { version = "0.2.24", optional = true, features = ["q1"] }

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-4 = { version = "0.2.24", optional = true, features = ["q1", "metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-4 = { version = "0.2.24", optional = true, features = ["q1", "vulkan"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
