[package]
name = "skill-llm"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "LLM inference engine for NeuroSkill — extracted workspace crate"

[features]
default    = []
llm        = ["dep:llama-cpp-4", "axum/multipart", "llm-mtmd"]
llm-metal  = ["llm", "llama-cpp-4?/metal"]
llm-cuda   = ["llm", "llama-cpp-4?/cuda"]
llm-vulkan = ["llm", "llama-cpp-4?/vulkan"]
llm-mtmd   = ["llm", "llama-cpp-4?/mtmd"]
llm-native = ["llm", "llama-cpp-4?/native"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
glob = "0.3"
skill-constants = { path = "../skill-constants" }
skill-data      = { path = "../skill-data" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { workspace = true }
axum       = { version = "0.8", features = ["ws"] }
tokio      = { version = "1", features = ["full"] }
async-stream = "0.3"
log        = "0.4"
base64 = { workspace = true }
ureq       = { version = "3", features = ["native-tls", "json"] }
either     = "1"
hf-hub     = "0.5"
skill-tools  = { path = "../skill-tools", default-features = false }
skill-skills = { path = "../skill-skills" }

[build-dependencies]

llama-cpp-4 = { version = "0.2.43", optional = true, default-features = false, features = ["ggml", "native"] }

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-4 = { version = "0.2.43", optional = true, default-features = false, features = ["ggml", "metal", "native", "mtmd"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-4 = { version = "0.2.43", optional = true, default-features = false, features = ["ggml", "vulkan", "native", "mtmd"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
