[package]
name = "skill-location"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Cross-platform location — CoreLocation (macOS) with IP-geolocation fallback (Linux/Windows)"

[dependencies]
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
thiserror   = { workspace = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ureq = { version = "3", features = ["native-tls", "json"] }

[build-dependencies]
cc = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
