[package]
name = "skill-lsl"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "LSL and rlsl-iroh stream sink for Skill — receive EEG from any LSL source"

[dependencies]
skill-constants = { path = "../skill-constants" }
skill-devices   = { path = "../skill-devices" }

# LSL core + iroh bridge (published on crates.io)
rlsl      = "0.0.4"
rlsl-iroh = "0.0.4"

tokio       = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
async-trait = "0.1"
log         = "0.4"
iroh        = "0.97"
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
rand        = "0.10"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
