[package]
name = "skill-router"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "WebSocket/HTTP command routing, UMAP projection, embedding loaders, EEG metric rounding — extracted workspace crate"

[dependencies]
skill-constants = { path = "../skill-constants" }
skill-commands  = { path = "../skill-commands" }
skill-data      = { path = "../skill-data" }
skill-settings  = { path = "../skill-settings" }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
rusqlite = { workspace = true }
fast-umap       = { version = "1.2.3", default-features = false }
burn            = { version = "0.20.1", default-features = false, features = ["wgpu"] }
burn-cubecl     = "0.20.1"
cubecl          = { version = "0.9.0", features = ["wgpu"] }
crossbeam-channel = "0.5.15"
