[package]
name = "skill-settings"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "Persistent configuration types and disk I/O — extracted workspace crate"

[dependencies]
skill-constants    = { path = "../skill-constants" }
skill-eeg          = { path = "../skill-eeg" }
skill-tts          = { path = "../skill-tts" }
skill-llm          = { path = "../skill-llm" }

skill-data         = { path = "../skill-data" }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
dirs               = "6"
keyring            = { version = "3.6", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }

[features]
default = []
llm     = []
