[package]
name = "skill-tools"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "LLM tool definitions, execution, and parsing for NeuroSkill"

[features]
default   = ["headless"]
headless  = ["dep:skill-headless"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
skill-constants = { path = "../skill-constants" }
skill-headless  = { path = "../skill-headless", optional = true }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", default-features = false, features = ["clock", "std"] }
jsonschema  = "0.45"
regex       = "1"
ureq        = { version = "3", features = ["native-tls", "json"] }
urlencoding = "2"
dirs        = "6"
rfd         = { version = "0.17", default-features = false, features = ["file-handle-inner", "xdg-portal"] }
tokio       = { version = "1", features = ["full"] }
sha2        = "0.10"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
