[package]
name = "skill-tts"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "TTS engine for NeuroSkill — extracted workspace crate"

[features]
default     = []
tts-kitten  = ["dep:kittentts", "dep:rodio"]
tts-neutts  = ["dep:neutts", "dep:rodio", "dep:sha2", "dep:hound"]

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["sync"] }
hf-hub     = "0.5"
dirs       = "6"

kittentts  = { version = "0.2.7", features = ["espeak"], optional = true }
rodio      = { version = "0.22", default-features = false, features = ["playback", "symphonia-wav"], optional = true }
sha2       = { version = "0.10", optional = true }
hound      = { version = "3", optional = true }

neutts     = { version = "0.0.7", features = ["backbone", "espeak", "fast", "wgpu"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
neutts     = { version = "0.0.7", features = ["backbone", "espeak", "fast", "wgpu", "metal"], optional = true }
